Grammar/.antlr/ZCodeParser.cpp

// Generated from c:/Users/VOSTRO 3490/OneDrive/Desktop/ZCode/Grammar/ZCode.g4 by ANTLR 4.13.1


#include "ZCodeListener.h"

#include "ZCodeParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ZCodeParserStaticData final {
  ZCodeParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ZCodeParserStaticData(const ZCodeParserStaticData&) = delete;
  ZCodeParserStaticData(ZCodeParserStaticData&&) = delete;
  ZCodeParserStaticData& operator=(const ZCodeParserStaticData&) = delete;
  ZCodeParserStaticData& operator=(ZCodeParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag zcodeParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ZCodeParserStaticData *zcodeParserStaticData = nullptr;

void zcodeParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (zcodeParserStaticData != nullptr) {
    return;
  }
#else
  assert(zcodeParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ZCodeParserStaticData>(
    std::vector<std::string>{
      "program", "decl", "var_decl", "num_list", "vartype", "func_decl", 
      "params", "param", "stmt", "if_stmt", "assign_stmt", "lhs", "elem_array", 
      "for_stmt", "break_stmt", "continue_stmt", "return_stmt", "func_call_stmt", 
      "block_stmt", "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
      "expr6", "expr7", "array_cell", "func_call", "operands", "literals", 
      "array_lit", "expr_list"
    },
    std::vector<std::string>{
      "", "'break'", "'continue'", "'if'", "'else'", "'elif'", "'for'", 
      "'until'", "'by'", "'true'", "'false'", "'number'", "'bool'", "'string'", 
      "'return'", "'dynamic'", "'not'", "'and'", "'var'", "'or'", "'begin'", 
      "'end'", "'func'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'='", 
      "'!='", "'<-'", "'<'", "'<='", "'>'", "'>='", "'...'", "'('", "')'", 
      "'['", "']'", "','"
    },
    std::vector<std::string>{
      "", "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "FOR", "UNTIL", "BY", 
      "TRUE", "FALSE", "NUMBER", "BOOL", "STRING", "RETURN", "DYNAMIC", 
      "NOT", "AND", "VAR", "OR", "BEGIN", "END", "FUNC", "ADD", "SUB", "MUL", 
      "DIV", "MOD", "STR_EQ", "EQ", "NOT_EQ", "REV_ARROW", "LT", "LTE", 
      "GT", "GTE", "CONCAT", "LR", "RR", "LS", "RS", "COMMA", "ID", "NUM_LIT", 
      "STR_LIT", "NEWLINE", "CMT", "WS", "ERROR_CHAR", "UNCLOSED_STRING", 
      "ILLEGAL_ESCAPE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  zcodeParserStaticData = staticData.release();
}

}

ZCodeParser::ZCodeParser(TokenStream *input) : ZCodeParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ZCodeParser::ZCodeParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ZCodeParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *zcodeParserStaticData->atn, zcodeParserStaticData->decisionToDFA, zcodeParserStaticData->sharedContextCache, options);
}

ZCodeParser::~ZCodeParser() {
  delete _interpreter;
}

const atn::ATN& ZCodeParser::getATN() const {
  return *zcodeParserStaticData->atn;
}

std::string ZCodeParser::getGrammarFileName() const {
  return "ZCode.g4";
}

const std::vector<std::string>& ZCodeParser::getRuleNames() const {
  return zcodeParserStaticData->ruleNames;
}

const dfa::Vocabulary& ZCodeParser::getVocabulary() const {
  return zcodeParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ZCodeParser::getSerializedATN() const {
  return zcodeParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ZCodeParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ZCodeParser::DeclContext *> ZCodeParser::ProgramContext::decl() {
  return getRuleContexts<ZCodeParser::DeclContext>();
}

ZCodeParser::DeclContext* ZCodeParser::ProgramContext::decl(size_t i) {
  return getRuleContext<ZCodeParser::DeclContext>(i);
}

tree::TerminalNode* ZCodeParser::ProgramContext::EOF() {
  return getToken(ZCodeParser::EOF, 0);
}

std::vector<tree::TerminalNode *> ZCodeParser::ProgramContext::NEWLINE() {
  return getTokens(ZCodeParser::NEWLINE);
}

tree::TerminalNode* ZCodeParser::ProgramContext::NEWLINE(size_t i) {
  return getToken(ZCodeParser::NEWLINE, i);
}


size_t ZCodeParser::ProgramContext::getRuleIndex() const {
  return ZCodeParser::RuleProgram;
}

void ZCodeParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ZCodeParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

ZCodeParser::ProgramContext* ZCodeParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ZCodeParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ZCodeParser::NEWLINE) {
      setState(66);
      match(ZCodeParser::NEWLINE);
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(72);
    decl();
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 35184376592384) != 0)) {
      setState(75);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ZCodeParser::NEWLINE: {
          setState(73);
          match(ZCodeParser::NEWLINE);
          break;
        }

        case ZCodeParser::NUMBER:
        case ZCodeParser::BOOL:
        case ZCodeParser::STRING:
        case ZCodeParser::DYNAMIC:
        case ZCodeParser::VAR:
        case ZCodeParser::FUNC: {
          setState(74);
          decl();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(80);
    match(ZCodeParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

ZCodeParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZCodeParser::Var_declContext* ZCodeParser::DeclContext::var_decl() {
  return getRuleContext<ZCodeParser::Var_declContext>(0);
}

ZCodeParser::Func_declContext* ZCodeParser::DeclContext::func_decl() {
  return getRuleContext<ZCodeParser::Func_declContext>(0);
}

std::vector<tree::TerminalNode *> ZCodeParser::DeclContext::NEWLINE() {
  return getTokens(ZCodeParser::NEWLINE);
}

tree::TerminalNode* ZCodeParser::DeclContext::NEWLINE(size_t i) {
  return getToken(ZCodeParser::NEWLINE, i);
}


size_t ZCodeParser::DeclContext::getRuleIndex() const {
  return ZCodeParser::RuleDecl;
}

void ZCodeParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void ZCodeParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

ZCodeParser::DeclContext* ZCodeParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 2, ZCodeParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ZCodeParser::NUMBER:
      case ZCodeParser::BOOL:
      case ZCodeParser::STRING:
      case ZCodeParser::DYNAMIC:
      case ZCodeParser::VAR: {
        setState(82);
        var_decl();
        break;
      }

      case ZCodeParser::FUNC: {
        setState(83);
        func_decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(87); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(86);
              match(ZCodeParser::NEWLINE);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(89); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

ZCodeParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZCodeParser::Var_declContext::ID() {
  return getToken(ZCodeParser::ID, 0);
}

ZCodeParser::VartypeContext* ZCodeParser::Var_declContext::vartype() {
  return getRuleContext<ZCodeParser::VartypeContext>(0);
}

tree::TerminalNode* ZCodeParser::Var_declContext::DYNAMIC() {
  return getToken(ZCodeParser::DYNAMIC, 0);
}

tree::TerminalNode* ZCodeParser::Var_declContext::REV_ARROW() {
  return getToken(ZCodeParser::REV_ARROW, 0);
}

ZCodeParser::ExprContext* ZCodeParser::Var_declContext::expr() {
  return getRuleContext<ZCodeParser::ExprContext>(0);
}

tree::TerminalNode* ZCodeParser::Var_declContext::VAR() {
  return getToken(ZCodeParser::VAR, 0);
}

tree::TerminalNode* ZCodeParser::Var_declContext::LS() {
  return getToken(ZCodeParser::LS, 0);
}

ZCodeParser::Num_listContext* ZCodeParser::Var_declContext::num_list() {
  return getRuleContext<ZCodeParser::Num_listContext>(0);
}

tree::TerminalNode* ZCodeParser::Var_declContext::RS() {
  return getToken(ZCodeParser::RS, 0);
}


size_t ZCodeParser::Var_declContext::getRuleIndex() const {
  return ZCodeParser::RuleVar_decl;
}

void ZCodeParser::Var_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl(this);
}

void ZCodeParser::Var_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl(this);
}

ZCodeParser::Var_declContext* ZCodeParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 4, ZCodeParser::RuleVar_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ZCodeParser::NUMBER:
        case ZCodeParser::BOOL:
        case ZCodeParser::STRING: {
          setState(91);
          vartype();
          break;
        }

        case ZCodeParser::DYNAMIC: {
          setState(92);
          match(ZCodeParser::DYNAMIC);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(95);
      match(ZCodeParser::ID);
      setState(98);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ZCodeParser::REV_ARROW) {
        setState(96);
        match(ZCodeParser::REV_ARROW);
        setState(97);
        expr();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(100);
      match(ZCodeParser::VAR);
      setState(101);
      match(ZCodeParser::ID);
      setState(102);
      match(ZCodeParser::REV_ARROW);
      setState(103);
      expr();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(104);
      vartype();
      setState(105);
      match(ZCodeParser::ID);
      setState(106);
      match(ZCodeParser::LS);
      setState(107);
      num_list();
      setState(108);
      match(ZCodeParser::RS);
      setState(111);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ZCodeParser::REV_ARROW) {
        setState(109);
        match(ZCodeParser::REV_ARROW);
        setState(110);
        expr();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Num_listContext ------------------------------------------------------------------

ZCodeParser::Num_listContext::Num_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZCodeParser::Num_listContext::NUM_LIT() {
  return getToken(ZCodeParser::NUM_LIT, 0);
}

tree::TerminalNode* ZCodeParser::Num_listContext::COMMA() {
  return getToken(ZCodeParser::COMMA, 0);
}

ZCodeParser::Num_listContext* ZCodeParser::Num_listContext::num_list() {
  return getRuleContext<ZCodeParser::Num_listContext>(0);
}


size_t ZCodeParser::Num_listContext::getRuleIndex() const {
  return ZCodeParser::RuleNum_list;
}

void ZCodeParser::Num_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNum_list(this);
}

void ZCodeParser::Num_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNum_list(this);
}

ZCodeParser::Num_listContext* ZCodeParser::num_list() {
  Num_listContext *_localctx = _tracker.createInstance<Num_listContext>(_ctx, getState());
  enterRule(_localctx, 6, ZCodeParser::RuleNum_list);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(119);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(115);
      match(ZCodeParser::NUM_LIT);
      setState(116);
      match(ZCodeParser::COMMA);
      setState(117);
      num_list();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(118);
      match(ZCodeParser::NUM_LIT);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VartypeContext ------------------------------------------------------------------

ZCodeParser::VartypeContext::VartypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZCodeParser::VartypeContext::NUMBER() {
  return getToken(ZCodeParser::NUMBER, 0);
}

tree::TerminalNode* ZCodeParser::VartypeContext::BOOL() {
  return getToken(ZCodeParser::BOOL, 0);
}

tree::TerminalNode* ZCodeParser::VartypeContext::STRING() {
  return getToken(ZCodeParser::STRING, 0);
}


size_t ZCodeParser::VartypeContext::getRuleIndex() const {
  return ZCodeParser::RuleVartype;
}

void ZCodeParser::VartypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVartype(this);
}

void ZCodeParser::VartypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVartype(this);
}

ZCodeParser::VartypeContext* ZCodeParser::vartype() {
  VartypeContext *_localctx = _tracker.createInstance<VartypeContext>(_ctx, getState());
  enterRule(_localctx, 8, ZCodeParser::RuleVartype);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 14336) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

ZCodeParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZCodeParser::Func_declContext::FUNC() {
  return getToken(ZCodeParser::FUNC, 0);
}

tree::TerminalNode* ZCodeParser::Func_declContext::ID() {
  return getToken(ZCodeParser::ID, 0);
}

tree::TerminalNode* ZCodeParser::Func_declContext::LR() {
  return getToken(ZCodeParser::LR, 0);
}

tree::TerminalNode* ZCodeParser::Func_declContext::RR() {
  return getToken(ZCodeParser::RR, 0);
}

ZCodeParser::ParamsContext* ZCodeParser::Func_declContext::params() {
  return getRuleContext<ZCodeParser::ParamsContext>(0);
}

std::vector<tree::TerminalNode *> ZCodeParser::Func_declContext::NEWLINE() {
  return getTokens(ZCodeParser::NEWLINE);
}

tree::TerminalNode* ZCodeParser::Func_declContext::NEWLINE(size_t i) {
  return getToken(ZCodeParser::NEWLINE, i);
}

ZCodeParser::Return_stmtContext* ZCodeParser::Func_declContext::return_stmt() {
  return getRuleContext<ZCodeParser::Return_stmtContext>(0);
}

ZCodeParser::Block_stmtContext* ZCodeParser::Func_declContext::block_stmt() {
  return getRuleContext<ZCodeParser::Block_stmtContext>(0);
}


size_t ZCodeParser::Func_declContext::getRuleIndex() const {
  return ZCodeParser::RuleFunc_decl;
}

void ZCodeParser::Func_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_decl(this);
}

void ZCodeParser::Func_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_decl(this);
}

ZCodeParser::Func_declContext* ZCodeParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 10, ZCodeParser::RuleFunc_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(ZCodeParser::FUNC);
    setState(124);
    match(ZCodeParser::ID);
    setState(125);
    match(ZCodeParser::LR);
    setState(127);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 14336) != 0)) {
      setState(126);
      params();
    }
    setState(129);
    match(ZCodeParser::RR);
    setState(133);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(130);
        match(ZCodeParser::NEWLINE); 
      }
      setState(135);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    }
    setState(138);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ZCodeParser::RETURN: {
        setState(136);
        return_stmt();
        break;
      }

      case ZCodeParser::BEGIN: {
        setState(137);
        block_stmt();
        break;
      }

      case ZCodeParser::NEWLINE: {
        break;
      }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamsContext ------------------------------------------------------------------

ZCodeParser::ParamsContext::ParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZCodeParser::ParamContext* ZCodeParser::ParamsContext::param() {
  return getRuleContext<ZCodeParser::ParamContext>(0);
}

tree::TerminalNode* ZCodeParser::ParamsContext::COMMA() {
  return getToken(ZCodeParser::COMMA, 0);
}

ZCodeParser::ParamsContext* ZCodeParser::ParamsContext::params() {
  return getRuleContext<ZCodeParser::ParamsContext>(0);
}


size_t ZCodeParser::ParamsContext::getRuleIndex() const {
  return ZCodeParser::RuleParams;
}

void ZCodeParser::ParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParams(this);
}

void ZCodeParser::ParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParams(this);
}

ZCodeParser::ParamsContext* ZCodeParser::params() {
  ParamsContext *_localctx = _tracker.createInstance<ParamsContext>(_ctx, getState());
  enterRule(_localctx, 12, ZCodeParser::RuleParams);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(140);
      param();
      setState(141);
      match(ZCodeParser::COMMA);
      setState(142);
      params();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(144);
      param();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

ZCodeParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZCodeParser::VartypeContext* ZCodeParser::ParamContext::vartype() {
  return getRuleContext<ZCodeParser::VartypeContext>(0);
}

tree::TerminalNode* ZCodeParser::ParamContext::ID() {
  return getToken(ZCodeParser::ID, 0);
}

tree::TerminalNode* ZCodeParser::ParamContext::LS() {
  return getToken(ZCodeParser::LS, 0);
}

ZCodeParser::Num_listContext* ZCodeParser::ParamContext::num_list() {
  return getRuleContext<ZCodeParser::Num_listContext>(0);
}

tree::TerminalNode* ZCodeParser::ParamContext::RS() {
  return getToken(ZCodeParser::RS, 0);
}


size_t ZCodeParser::ParamContext::getRuleIndex() const {
  return ZCodeParser::RuleParam;
}

void ZCodeParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void ZCodeParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZCodeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

ZCodeParser::ParamContext* ZCodeParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 14, ZCodeParser::RuleParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(147);
      vartype();
      setState(148);
      match(ZCodeParser::ID);
      break;
    }
